--- a/ASP-MVC/appsettings.json
+++ b/ASP-MVC/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Main-DB": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=EpreuveASP-DB;Integrated Security=True;"
+  }
 }
